--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "d3": "^5.15.0",
+    "fs-extra": "^8.1.0",
+    "json2csv": "^4.5.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
