--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "animate.css": "^3.7.2",
     "d3": "^5.15.0",
     "fs-extra": "^8.1.0",
     "json2csv": "^4.5.4",
