--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,9 +13,11 @@
     "fs-extra": "^8.1.0",
     "json2csv": "^4.5.4",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
     "underscore": "^1.9.2"
   },
   "scripts": {
