--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^3.7.2",
+    "axios": "^0.19.2",
     "d3": "^5.15.0",
     "fs-extra": "^8.1.0",
+    "history": "^4.10.1",
     "json2csv": "^4.5.4",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
